--- a/frontend/src/style/notfound.css
+++ b/frontend/src/style/notfound.css
@@ -1,20 +1,32 @@
 .background {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100vh; 
     margin: 0;
     background-color: black;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color: white
+    justify-content: center; 
+    flex-direction: column;
 } 
 
+
 .text {
-    width: 900px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding-bottom: 50px;
     color: gainsboro;
-    background-image: gradient(black,black, white, white);
+}
+
+.button-back {
+    border-radius: 10px;
+    height: 50px;
+    width: 160px;
+    font-size: 20px;
+    background-color: black;
+    color: gainsboro;
+    border-color: gainsboro;
+}
+
+.button-back:hover {
+    background-color: gainsboro;
+    color: black;
+    border-color: gainsboro;
 }
