--- a/frontend/src/style/all.css
+++ b/frontend/src/style/all.css
@@ -2,4 +2,14 @@ body {
     background-color: black !important;
     width: 100%;
     height: 100vh;
+    color: gainsboro !important;
+}
+
+#root {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
 }
