--- a/frontend/src/style/all.css
+++ b/frontend/src/style/all.css
@@ -1,7 +1,9 @@
 body {
     background-color: black !important;
     width: 100%;
-    height: 100vh;
+    display: flex;
+    justify-content: center;
+    /* height: 100vh; */
     color: gainsboro !important;
 }
 
@@ -9,7 +11,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     padding: 50px;
+    width: 1200px;
 }
