--- a/frontend/src/style/all.css
+++ b/frontend/src/style/all.css
@@ -1,17 +1,19 @@
 body {
     background-color: black !important;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
     /* height: 100vh; */
+    /* padding: 20px; */
     color: gainsboro !important;
+    overflow-x: hidden;
 }
 
 #root {
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 50px;
-    width: 1200px;
+    /* width: 1200px; */
 }
