--- a/frontend/src/style/notfound.css
+++ b/frontend/src/style/notfound.css
@@ -1,6 +1,6 @@
 .background {
     width: 100%;
-    height: 100vh; 
+    /* height: 100vh;  */
     margin: 0;
     background-color: black;
     display: flex;
