--- a/frontend/src/style/DynamicButtons.module.css
+++ b/frontend/src/style/DynamicButtons.module.css
@@ -47,8 +47,8 @@
   font-weight: bold;
 }
 
-.generateButton {
-  margin-top: 20px;
+.generateButton, .generateButtonActivate {
+  margin: 20px 0 50px;
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
@@ -62,6 +62,10 @@
 
 .generateButton:hover {
   background-color: rgb(110, 110, 190);
+}
+
+.generateButtonActivate:nth-child(2) {
+  margin-left: 20px;
 }
 
 
